src/test/ui/consts/control-flow/loop.stderr
error[E0658]: `for` is not allowed in a `const`
  --> $DIR/loop.rs:53:5
   |
LL | /     for i in 0..4 {
LL | |
LL | |         x += i;
LL | |     }
   | |_____^
   |
   = note: see issue #87575 <https://github.com/rust-lang/rust/issues/87575> for more information
   = help: add `#![feature(const_for)]` to the crate attributes to enable

error[E0658]: `for` is not allowed in a `const`
  --> $DIR/loop.rs:58:5
   |
LL | /     for i in 0..4 {
LL | |
LL | |         x += i;
LL | |     }
   | |_____^
   |
   = note: see issue #87575 <https://github.com/rust-lang/rust/issues/87575> for more information
   = help: add `#![feature(const_for)]` to the crate attributes to enable

error[E0277]: the trait bound `std::ops::Range<{integer}>: Iterator` is not satisfied
  --> $DIR/loop.rs:53:14
   |
LL |     for i in 0..4 {
   |              ^^^^ `std::ops::Range<{integer}>` is not an iterator
   |
   = help: the trait `~const Iterator` is not implemented for `std::ops::Range<{integer}>`
note: the trait `Iterator` is implemented for `std::ops::Range<{integer}>`, but that implementation is not `const`
  --> $DIR/loop.rs:53:14
   |
LL |     for i in 0..4 {
   |              ^^^^
   = note: required for `std::ops::Range<{integer}>` to implement `~const IntoIterator`

error[E0277]: the trait bound `std::ops::Range<{integer}>: Iterator` is not satisfied
  --> $DIR/loop.rs:58:14
   |
LL |     for i in 0..4 {
   |              ^^^^ `std::ops::Range<{integer}>` is not an iterator
   |
   = help: the trait `~const Iterator` is not implemented for `std::ops::Range<{integer}>`
note: the trait `Iterator` is implemented for `std::ops::Range<{integer}>`, but that implementation is not `const`
  --> $DIR/loop.rs:58:14
   |
LL |     for i in 0..4 {
   |              ^^^^
   = note: required for `std::ops::Range<{integer}>` to implement `~const IntoIterator`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0277, E0658.
For more information about an error, try `rustc --explain E0277`.
